# fire_ctrl

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  audit.toml  deny.toml  justfile
.github/: dependabot.yml
.github/workflows/: branch-protection.yml  ci.yml  release.yml  security.yml
.opencode/: AGENTS.md  opencode.json
_dev/: notes.md
bench/: health.hurl  scrape.hurl
benches/: scraper.rs
docs/: architecture.md  ci.md  internal_testing.md  ops.md  practice.md  run.md  test.md  usage.md
migrations/: 001_initial.sql
scripts/: api-suite-quotes.sh
scripts/api-tests/: _lib.sh  batch_cancel.sh  batch_create.sh  batch_status.sh  crawl_cancel.sh  crawl_create.sh  crawl_errors.sh  crawl_ongoing.sh  crawl_status.sh  extract_create.sh  extract_status.sh  health.sh  map.sh  scrape.sh  search.sh
src/: api.rs  config.rs  database.rs  lib.rs  llm.rs  main.rs  models.rs  scraper.rs  worker.rs
tests/: api_handlers.rs  extract_json_props.rs  postgres_queue.rs  quotes_v2_endpoints.sh  sdk_v2_contract.rs
