[package]
name = "fire_ctrl"
version = "0.1.0"
authors = ["cipher-rc5"]
edition = "2024"
rust-version = "1.93"
description = "spec-compliant self-hosted Firecrawl in Rust"

[[bin]]
name = "fire_ctrl"
path = "src/main.rs"

[dependencies]
# web_framework
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }

# database
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }

# queue / messaging
lapin = "4.0.3" # rabbitmq_amqp_client

# cache / rate-limit
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# http_client
reqwest = { version = "0.13.2", features = ["json", "stream", "socks"] }

# web_scraping
chromiumoxide = "0.9.0"
scraper = "0.25"

# url_handling
url = "2"

# async_utilities
futures = "0.3"

# error_handling
anyhow = "1"
thiserror = "2"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# configuration
dotenvy = "0.15"

# uuid
uuid = { version = "1", features = ["v4", "serde"] }

# time
chrono = { version = "0.4", features = ["serde"] }

# markdown_conversion
htmd = "0.5.0"

# robots.txt_parser
robotstxt = "0.3"

# sitemap_parser
sitemap = "0.4"

# cli
clap = { version = "4", features = ["derive"] }

# url_encoding (for search query building)
urlencoding = "2"

# system_metrics (cpu / ram gating)
sysinfo = "0.38.2"

[dev-dependencies]
firecrawl = { git = "https://github.com/firecrawl/firecrawl", package = "firecrawl" }
mockito = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
