[package]
name = "fire_ctrl"
version = "0.1.0"
authors = ["cipher-rc5"]
edition = "2024"
rust-version = "1.95"
description = "spec-compliant self-hosted Firecrawl in Rust"
license = "MIT"
repository = "https://github.com/cipher-rc5/fire_ctrl"

[lib]
name = "fire_ctrl"
path = "src/lib.rs"

[[bin]]
name = "fire_ctrl"
path = "src/main.rs"

[[bench]]
name = "scraper"
harness = false

[features]
# Enables the optional Firecrawl SDK v2 compatibility contract tests in
# `tests/sdk_v2_contract.rs`. Off by default so `cargo test` compiles without
# pulling in an upstream SDK that may not always match our pinned commit.
contract-tests = []
# Enables the testcontainers-backed Postgres integration test in
# `tests/postgres_queue.rs`. Off by default because (a) it needs Docker and
# (b) the testcontainers crate's API changes between minor versions and we
# don't want a drift in that dep to break `cargo check --all-targets`.
postgres-integration = []

[dependencies]
# web_framework
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "trace", "compression-full"] }

# database
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }

# cache / rate-limit
redis = { version = "1.2.1", features = ["tokio-comp", "connection-manager"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# http_client
reqwest = { version = "0.13.4", features = ["json", "stream", "socks"] }

# web_scraping
chromiumoxide = "0.9.1"
scraper = "0.27"

# url_handling
url = "2"

# async_utilities
futures = "0.3"

# error_handling
anyhow = "1"
thiserror = "2"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# configuration
dotenvy = "0.15"

# uuid
uuid = { version = "1", features = ["v4", "serde"] }

# time
chrono = { version = "0.4", features = ["serde"] }

# markdown_conversion
htmd = "0.5.4"

# robots.txt_parser
robotstxt = "0.3"

# sitemap_parser
sitemap = "0.4"

# cli
clap = { version = "4", features = ["derive"] }

# url_encoding (for search query building)
urlencoding = "2"

# system_metrics (cpu / ram gating)
sysinfo = "0.39.2"

[dev-dependencies]
firecrawl = { git = "https://github.com/firecrawl/firecrawl", package = "firecrawl", rev = "3afe6df1f48f4485b8a018069ad8bbf54ae99cb2" }
mockito = "1"
# `tower::ServiceExt::oneshot` for in-process Router smoke tests.
tower = { version = "0.5", features = ["util"] }
# Property-based testing for the LLM JSON extractor.
proptest = "1"
# Postgres integration tests against a containerised TimescaleDB.
testcontainers = "0.27"
# Benchmark harness for BFS + markdown conversion.
criterion = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
